--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -132,6 +132,8 @@ button {
 
 .index {
   & .page {
+    padding: 15px;
+    padding-top: 0;
     & a {
       width: 50%;
     }
@@ -296,7 +298,7 @@ button {
     text-align: center;
     margin-bottom: 10px;
   }
-  & input,
+  & input[type="text"],
   & button {
     margin: 0 auto 15px;
     display: block;
@@ -312,10 +314,20 @@ button {
 }
 
 .admin-publish {
-  & .publish-title input {
+  & .publish-title input[type="text"] {
     width: 100%;
-    margin-bottom: 15px;
   }
+  & .publish-title .title-link {
+    margin-top: 15px;
+  }
+  & .publish-title input[type="radio"] {
+    vertical-align: middle;
+    margin-right: 5px;
+  }
+  & label {
+      display: inline-block;
+      margin-right: 20px;
+    }
   & .publish-handle {
     margin-top: 40px;
     display: flex;
