--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,8 +3,7 @@
  */
 html,
 body {
-  font: 15px / 1.6 "Microsoft Yahei", "Hiragino Sans GB", "Helvetica Neue", Helvetica, tahoma, arial, Verdana, sans-serif, "WenQuanYi Micro Hei", "\5B8B\4F53";
-  font-size: 15px;
+  font: 16px / 1.6 "Microsoft Yahei", "Hiragino Sans GB", "Helvetica Neue", Helvetica, tahoma, arial, Verdana, sans-serif, "WenQuanYi Micro Hei", "\5B8B\4F53";
   background-color: #EDE9E8;
   color: #333;
 }
@@ -84,7 +83,7 @@ input {
 }
 
 .container {
-  padding: 25px 15px;
+  padding: 15px;
 }
 
 button {
@@ -154,7 +153,7 @@ button {
     display: inline-block;
     border-radius: 4px;
     margin-right: 15px;
-    margin-bottom: 25px;
+    margin-bottom: 15px;
     & a {
       padding: 8px 15px;
       color: #333;
@@ -197,16 +196,15 @@ button {
 }
 
 .archives {
+  padding-top: 0;
   & .archive {
-    margin-top: 25px;
     & .archive-date {
       font-size: 17px;
-      margin-bottom: 15px;
+      font-weight: bold;
+      margin: 20px 0 10px 0;
     }
   }
-  & .archive:nth-child(1) {
-    margin-top: 0;
-  }
+
   & li {
     list-style-position:inside;
   }
@@ -299,6 +297,7 @@ button {
     margin-bottom: 10px;
   }
   & input[type="text"],
+  & input[type="password"],
   & button {
     margin: 0 auto 15px;
     display: block;
