--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -67,7 +67,11 @@ img {
 }
 
 
-
+textarea {
+  resize: vertical;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", "Helvetica Neue", sans-serif;
+  font-size: 14px;
+}
 
 /* global */
 
