--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,3 +1,4 @@
+@import './var.scss';
 /* reset */
 
 *,
@@ -85,6 +86,38 @@ input[type="search"] {
   font-size: 16px;
   box-shadow: inset 0 1px 3px #ddd;
   border-radius: 3px;
+}
+
+button {
+  outline: none;
+  border: none;
+  cursor: pointer;
+  background-color: $link-color;
+  color: #fff;
+  padding: 7px 10px;
+  border-radius: 3px;
+  &:hover {
+    background-color: darken($link-color, 5%);
+  }
+}
+.mask {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: 999;
+  background-color: rgba(0,0,0,0.3);
+}
+.mask .close {
+  font-size: 35px;
+  color: #fff;
+  cursor: pointer;
+  line-height: 1;
+  float: right;
+  margin-top: 50px;
+  margin-right: 50px;
 }
 
 .truncation {
