--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -43,6 +43,7 @@ html {
   color: #24292e;
 }
 
+html,
 body {
   position: relative;
   width: 100%;
@@ -63,7 +64,7 @@ a:active {
 }
 
 img {
-  display: block;
+  display: inline-block;
   vertical-align: top;
 }
 
@@ -96,10 +97,12 @@ button {
   color: #fff;
   padding: 7px 10px;
   border-radius: 3px;
+
   &:hover {
     background-color: darken($link-color, 5%);
   }
 }
+
 .mask {
   position: fixed;
   top: 0;
@@ -108,8 +111,9 @@ button {
   height: 100%;
   overflow: hidden;
   z-index: 999;
-  background-color: rgba(0,0,0,0.3);
+  background-color: rgba(0, 0, 0, 0.3);
 }
+
 .mask .close {
   font-size: 35px;
   color: #fff;
@@ -126,11 +130,6 @@ button {
   white-space: nowrap;
 }
 
-.container {
-  max-width: 770px;
-  margin-left: auto;
-  margin-right: auto;
-}
 
 .clearfix::after {
   display: table;
@@ -148,23 +147,6 @@ code {
   word-wrap: break-word !important;
 }
 
-/* .page-enter-active,
-.page-leave-active {
-  transition: opacity .5s
-}
-
-.page-enter,
-.page-leave-active {
-  opacity: 0
-} */
-
-/* index */
-.load-tip {
-  font-size: 14px;
-  color: #666;
-  text-align: center;
-}
-
 /* login */
 .login {
   input {
@@ -172,6 +154,7 @@ code {
     width: 300px;
     margin: 0 auto 30px auto;
   }
+
   button {
     width: 300px;
     height: 35px;
@@ -185,10 +168,12 @@ code {
   .archive-item {
     margin-bottom: 30px;
   }
+
   .item-title {
     font-size: 20px;
     font-weight: 400;
   }
+
   .item-list {
     li {
       display: flex;
@@ -196,14 +181,17 @@ code {
       color: #999;
       list-style-position: inside;
     }
+
     span {
       width: 80px;
     }
+
     a {
       display: block;
       flex: 1;
       color: $font-color;
       font-weight: lighter;
+
       &:hover {
         color: $link-color;
       }
@@ -218,11 +206,13 @@ code {
       display: inline-block;
       margin-right: 10px;
       margin-bottom: 10px;
+
       a {
         color: #666;
         padding: 3px 10px;
         background-color: #eee;
         border-radius: 3px;
+
         &:hover {
           background-color: darken(#eee, 5%);
         }
@@ -234,24 +224,32 @@ code {
 /* search */
 .search {
   .search-result {
-    color: #666;
-    span {
-      color: $link-color;
+    .result-des {
+      color: #666;
+      margin-bottom: 30px;
+
+      span {
+        color: $link-color;
+      }
     }
   }
+
   .search-wrap {
     text-align: center;
+
     h3 {
       font-size: 20px;
       font-weight: 400;
       margin-bottom: 30px;
     }
+
     label {
       display: block;
       max-width: 500px;
       margin-left: auto;
       margin-right: auto;
     }
+
     input {
       width: 100%;
     }
@@ -261,18 +259,22 @@ code {
 /* detail */
 .detail {
   .detail-title {
-    margin-bottom: 15px;
+    margin-bottom: 30px;
   }
+
   .detail-meta {
     font-size: 14px;
     color: #999;
     margin-bottom: 30px;
+
     .meta-division {
       margin: 0 7px;
     }
   }
+
   .detail-tags {
     margin-top: 30px;
+
     a {
       font-size: 14px;
       color: #666;
@@ -280,40 +282,52 @@ code {
       background-color: #eee;
       border-radius: 3px;
       margin-right: 15px;
+
       &:hover {
         background-color: darken(#eee, 5%);
       }
     }
   }
-  .detail-copyright {
+
+  .detail-pn {
+    font-size: 14px;
+    margin-top: 20px;
+    color: #666;
+  }
+
+  .detail-admin {
     font-size: 14px;
     color: #999;
-    text-align: center;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    margin: 20px 0;
+
+    p {
+      display: inline-block;
+      margin-right: 15px;
+    }
   }
-  .detail-admin {
-    display: flex;
-    justify-content: space-between;
-    line-height: 50px;
-    border-top: 1px dashed #ccc;
-    padding: 0 8px;
+
+  .detail-content {
+    .wmui-preview {
+      padding: 0 !important;
+    }
   }
 }
 
 /* admin update */
 .admin-update {
-  max-width: 960px;
   margin: 60px auto;
   text-align: center;
+
   .update-info {
     margin-bottom: 30px;
   }
+
   input {
     display: block;
     width: 300px;
     margin: 20px auto;
   }
+
   button {
     width: 300px;
     height: 40px;
@@ -323,26 +337,20 @@ code {
 /* admin tags */
 
 .admin-tags {
-  max-width: 960px;
   margin: 60px auto;
-  .tags-input {
-    text-align: center;
+
+  .tag-input {
+    // margin-top: 40px;
+    margin-bottom: 15px;
+    width: 300px;
+
     input {
-      border-right: none;
-      border-top-right-radius: 0;
-      border-bottom-right-radius: 0;
+      width: 100%;
     }
-    button {
-      line-height: 40px;
-      border: transparent;
-      display: inline-block;
-      vertical-align: top;
-      padding: 0 15px;
-      background-color: $font-color;
-      border-top-right-radius: 3px;
-      border-bottom-right-radius: 3px;
-      color: #fff;
-    }
+  }
+
+  .tag-flag {
+    margin-bottom: 10px;
   }
 }
 
@@ -351,99 +359,113 @@ code {
   display: flex;
   line-height: 45px;
   border-top: 1px solid #eee;
+
   .item-date {
-    flex:1;
+    flex: 1;
     text-align: center;
+    color: #666;
+    font-size: 14px;
   }
+
   .item-edit,
   .item-del {
     width: 60px;
     text-align: right;
   }
+
   .item-title {
     flex: 1;
+
     a {
       width: 100%;
     }
   }
+
   &:nth-child(1) {
     border-top: none;
   }
 }
 
-/* admin pravite */
-.admin-private {
-  max-width: 960px;
+/* admin draft */
+.admin-draft {
   margin: 60px auto;
+
+  .draft-null {
+    font-size: 25px;
+    text-align: center;
+    color: #666;
+  }
 }
 
 /* admin comment */
 .admin-comments {
-  max-width: 960px;
-  margin: 30px auto;
-  .comments-box {
-    width: 500px;
-    position: absolute;
-    left: 50%;
-    margin-left: -250px;
-    background-color: #fff;
-    border-radius: 3px;
-    z-index: 1000;
-    padding: 15px 10px;
-    textarea {
-      width: 100%;
-      border-color: #ddd;
-      border-radius: 3px;
-      margin: 8px 0;
-    }
-    button {
-      float: right;
-    }
+  margin: 60px auto;
+
+  .wmui-dialog .dialog {
+    width: 300px;
+  }
+
+  .comment-null {
+    text-align: center;
+    color: #666;
+    font-size: 25px;
   }
 }
 
-/* admin publish */
+/** 
+ * admin publish 
+*/
 .top-editor {
   z-index: 1 !important;
 }
-.full-screen  {
+
+.full-screen {
   z-index: 99 !important;
 }
 
 .admin-publish {
-  max-width: 960px;
   margin: 30px auto;
+
   .publish-title {
     display: block;
     width: 100%;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
   }
+
+  .publish-flag {
+    margin-bottom: 10px;
+    font-size: 14px;
+    color: #333;
+
+    label {
+      margin-right: 20px;
+    }
+  }
+
   .publish-handle {
     margin-top: 40px;
     display: flex;
     position: relative;
+
     input {
       flex: 1;
     }
+
     .handle-button {
       width: 400px;
       text-align: right;
+
       button {
         height: 38px;
         width: 80px;
       }
-      .button-private {
-        margin-right: 15px;
-        background-color: #ccc;
-        &:hover {
-          background-color: darken(#ccc, 5%);
-        }
-      }
     }
+
     .handle-tag {
       position: absolute;
       overflow: hidden;
       top: -90%;
+
       li {
         position: relative;
         display: inline-block;
@@ -453,23 +475,163 @@ code {
         padding-left: 8px;
         padding-right: 8px;
         border-radius: 3px;
+
         span {
           cursor: pointer;
         }
       }
     }
   }
+
   .publish-tags {
     margin-top: 15px;
     display: flex;
+
     .tags-intro {
       width: 90px;
     }
+
     .tags-all {
       flex: 1;
+
       a {
         margin-right: 15px;
       }
+    }
+  }
+}
+
+/* component  */
+.blog-list {
+  ul {
+    list-style: none;
+  }
+
+  .article {
+    margin-bottom: 50px;
+
+    .article-title {
+      font-size: 20px;
+      font-weight: normal;
+
+      a {
+        color: $font-color;
+
+        &:hover {
+          color: $link-color;
+        }
+      }
+
+      span {
+        font-size: 20px;
+        color: $link-color;
+      }
+    }
+
+    .article-body {
+      margin: 10px 0;
+      color: #666;
+      word-wrap: break-word;
+    }
+  }
+}
+
+.blog-comment {
+  img {
+    border-radius: 3px;
+    margin-right: 15px;
+  }
+
+  .comment-list {
+    ul {
+      list-style: none;
+
+      li {
+        margin-bottom: 20px;
+        border-bottom: 1px solid #ddd;
+      }
+
+      .list-header {
+        position: relative;
+        margin-bottom: 10px;
+        font-size: 14px;
+
+        .header-avatar {
+          float: left;
+        }
+
+        .header-reply {
+          display: inline-block;
+          vertical-align: top;
+          line-height: 1;
+
+          span {
+            font-size: 13px;
+            color: #999;
+            padding: 0 5px;
+          }
+        }
+
+        .header-username {
+          line-height: 1;
+          vertical-align: top;
+        }
+
+        .header-time {
+          position: absolute;
+          top: 12px;
+          left: 45px;
+          font-size: 13px;
+          color: #999;
+        }
+      }
+
+      .list-content {
+        margin-bottom: 10px;
+      }
+
+      .list-handler {
+        margin-bottom: 15px;
+
+        .handler-reply {
+          font-size: 14px;
+          color: #666;
+        }
+      }
+    }
+  }
+
+  .comment-box {
+    display: flex;
+
+    .box-content {
+      width: 100%;
+      height: 100px;
+      border: none;
+      border: 1px solid #ddd;
+      padding: 10px;
+      resize: vertical;
+      border-radius: 3px;
+    }
+  }
+
+  .comment-login {
+    button {
+      margin-top: 15px;
+      float: right;
+    }
+  }
+
+  .comment-unlogin {
+    background-color: #eee;
+    text-align: center;
+    border-radius: 3px;
+    padding: 15px;
+
+    p {
+      font-size: 14px;
+      color: #999;
+      margin-top: 10px;
     }
   }
 }
